--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-
-
+    <h1>Jogo da Memória</h1>
+    <span id="counter"></span>
     <div id="gameBoard">
         <!-- <div id="h4r299y478r" class="card" data-icon="bootstrap">
             <div class="card_front">
